fixing contrast

--- a/lesson-7/css/base.css
+++ b/lesson-7/css/base.css
@@ -125,7 +125,7 @@ header {
 
   h1 {
     font-size: 1em;
-    color: #fff;
+    color: #07354B;
     font-weight: bolder;
     font-family: "Source Sans Pro", sans-serif;
   }
